--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,7 +53,7 @@ jobs:
   publish-docker-image:
     name: Publish Docker Image
     needs: build-and-test # SÓ RODA SE o job 'build-and-test' for bem-sucedido
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' # E SÓ RODA em um push para a main
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master' # E SÓ RODA em um push para a main
 
     runs-on: ubuntu-latest
 
